--- a/dbt_bigquery_main/dbt_project.yml
+++ b/dbt_bigquery_main/dbt_project.yml
@@ -34,5 +34,5 @@ models:
   dbt_bigquery:
     # Config indicated by + and applies to all files under models/example/
     example:
-      +materialized: view
+      +materialized: table
     materialized: table
