--- a/dbt_bigquery_main/dbt_project.yml
+++ b/dbt_bigquery_main/dbt_project.yml
@@ -31,7 +31,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  dbt_bigquery:
+  dbt_bigquery_main:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: table
